--- a/public/publication/preprint/index.html
+++ b/public/publication/preprint/index.html
@@ -434,7 +434,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/posts/"><span>Færslur</span></a>
+          <a class="nav-link " href="/post/"><span>Færslur</span></a>
         </li>
 
         
