Nýtt booking kerfi

--- a/public/appointment/index.html
+++ b/public/appointment/index.html
@@ -496,40 +496,44 @@
 
 <div class="universal-wrapper">
   
-  <div class="article-style">
-  <link rel="stylesheet" href="style.css" type="text/css" />
-
-
-<p>Þetta er Rmarkdownskjal og við getum skrifað texta hér eins og okkur sýnist.</p>
-<script src="//simplybook.it/v2/widget/widget.js"></script>
-<script>var widget = new SimplybookWidget({
-    "widget_type":"iframe",
-    "url":"https:\/\/trhvs.simplybook.it",
-    "theme":"emeri",
-    "theme_settings":{
-        "timeline_show_end_time":"1",
-        "timeline_modern_display":"as_slots",
-        "sb_base_color":"#1c1c0b",
-        "booking_nav_bg_color":"#23b4d1",
-        "body_bg_color":"#f7f7f7",
-        "dark_font_color":"#494949",
-        "light_font_color":"#ffffff",
-        "btn_color_1":"#5e7da7",
-        "sb_company_label_color":"#ffffff",
-        "hide_img_mode":"0","show_sidebar":"0",
-        "sb_busy":"#d6d6c0",
-        "sb_available":"#23b4d1"
-    },
-    "timeline":"modern_week",
-    "datepicker":"inline_datepicker",
-    "is_rtl":false,
-    "app_config":{
-        "predefined":{
-            "service":"1"},
-        "sb_booking_company_time":{
-            "display":"none"}
-    }});
-</script>
+  <div class="article-style"><h1 id="læknagarður">Læknagarður</h1>
+<div class="cta">
+    <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
+    <button 
+    style = "background-color:#005691; 
+                color: #fff;
+                margin-top:6px;
+                margin-bottom:16px;
+                border-radius:4px;
+                font-size:1.6em;
+                padding:8px 20px;    
+                font-family: GibsonSemibold, Helvetica Neue, Helvetica, Arial, sans-serif;
+                float:none !important;
+                text-shadow:0 1px 1px rgba(0,0,0,0.2)" 
+        onClick = "Calendly.showPopupWidget('https://calendly.com/bgj2/laeknagardur');return false;">
+         Bóka ráðgjöf
+    </button>
+</div>
+<h1 id="íslensk-erfðagreining">Íslensk Erfðagreining</h1>
+<div class="cta">
+    <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
+    <button 
+    style = "background-color:#005691; 
+                color: #fff;
+                margin-top:6px;
+                margin-bottom:16px;
+                border-radius:4px;
+                font-size:1.6em;
+                padding:8px 20px;    
+                font-family: GibsonSemibold, Helvetica Neue, Helvetica, Arial, sans-serif;
+                float:none !important;
+                text-shadow:0 1px 1px rgba(0,0,0,0.2)" 
+        onClick = "Calendly.showPopupWidget('https://calendly.com/bgj2/islenskerfdagreining');return false;">
+         Bóka ráðgjöf
+    </button>
+</div>
 </div>
   
 
