--- a/public/appointment/index.html
+++ b/public/appointment/index.html
@@ -232,7 +232,7 @@
   
   <meta property="og:site_name" content="Tölfræðiráðgjöf Heilbrigðisvísindasviðs">
   <meta property="og:url" content="/appointment/">
-  <meta property="og:title" content="Bóka ráðgjöf | Tölfræðiráðgjöf Heilbrigðisvísindasviðs">
+  <meta property="og:title" content=" | Tölfræðiráðgjöf Heilbrigðisvísindasviðs">
   <meta property="og:description" content="Tölfræðiráðgjöf Heilbrigðisvísindasviðs Háskóla Íslands"><meta property="og:image" content="img/map[gravatar:%!s(bool=false) shape:circle]">
   <meta property="twitter:image" content="img/map[gravatar:%!s(bool=false) shape:circle]"><meta property="og:locale" content="en-us">
   
@@ -253,7 +253,7 @@
 
 
 
-  <title>Bóka ráðgjöf | Tölfræðiráðgjöf Heilbrigðisvísindasviðs</title>
+  <title> | Tölfræðiráðgjöf Heilbrigðisvísindasviðs</title>
 
 </head>
 
@@ -471,6 +471,8 @@
 
 
 
+  
+
 
 
 
@@ -485,7 +487,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Bóka ráðgjöf</h1>
+  <h1></h1>
 
   
 
@@ -496,43 +498,70 @@
 
 <div class="universal-wrapper">
   
-  <div class="article-style"><h1 id="læknagarður">Læknagarður</h1>
+  <div class="article-style">
+
+
+<style>
+body {
+text-align: justify}
+</style>
+<div id="læknagarður" class="section level1">
+<h1>Læknagarður</h1>
+<p><img src="1920_laeknagardur.jpg" width="90%" /></p>
 <div class="cta">
     <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
     <button 
     style = "background-color:#005691; 
                 color: #fff;
-                margin-top:6px;
+                margin-top:10px;
                 margin-bottom:16px;
+                margin-left: 20px;
+                margin-right: 20px;
                 border-radius:4px;
-                font-size:1.6em;
-                padding:8px 20px;    
+                font-size:1.2em;
+                padding:10px 10px;    
                 font-family: GibsonSemibold, Helvetica Neue, Helvetica, Arial, sans-serif;
-                float:none !important;
+                float:right !important;
                 text-shadow:0 1px 1px rgba(0,0,0,0.2)" 
         onClick = "Calendly.showPopupWidget('https://calendly.com/bgj2/laeknagardur');return false;">
          Bóka ráðgjöf
     </button>
 </div>
-<h1 id="íslensk-erfðagreining">Íslensk Erfðagreining</h1>
+<p>Á skrifstofu okkar í Læknagarði fer almenna ráðgjöfin fram. Þar geta allir sem eru framhaldsnemendur eða akademískt starfsfólk Heilbrigðisvísindasviðs bókað tíma. Skrifstofa okkar er staðsett á þriðjuhæð í <em>stofu 331</em>.</p>
+<ul>
+<li>Þriðjudagar: 09:00 - 14:00</li>
+<li>Fimmtudagar: 09:00 - 14:00</li>
+</ul>
+<hr />
+</div>
+<div id="íslensk-erfðagreining" class="section level1">
+<h1>Íslensk Erfðagreining</h1>
+<p><img src="decode.jpg" width="90%" /></p>
 <div class="cta">
     <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
     <button 
     style = "background-color:#005691; 
                 color: #fff;
-                margin-top:6px;
+                margin-top:10px;
                 margin-bottom:16px;
+                margin-left: 20px;
+                margin-right: 20px;
                 border-radius:4px;
-                font-size:1.6em;
-                padding:8px 20px;    
+                font-size:1.2em;
+                padding:10px 10px;    
                 font-family: GibsonSemibold, Helvetica Neue, Helvetica, Arial, sans-serif;
-                float:none !important;
+                float:right !important;
                 text-shadow:0 1px 1px rgba(0,0,0,0.2)" 
         onClick = "Calendly.showPopupWidget('https://calendly.com/bgj2/islenskerfdagreining');return false;">
          Bóka ráðgjöf
     </button>
+</div>
+<p>Hér geta framhaldsnemendur og starfsfólk sem eru nú þegar til húsa í Íslenskri Erfðagreiningu bókað tíma. Ráðgjöfin er almennt séð staðsett hjá Miðstöð í Lýðheilsuvísindum en getur farið fram hvar sem er í byggingunni.</p>
+<ul>
+<li>Mánudagar: 09:00 - 14:00</li>
+</ul>
 </div>
 </div>
   
