--- a/public/appointment/index.html
+++ b/public/appointment/index.html
@@ -214,8 +214,8 @@
   
 
   <link rel="manifest" href="/index.webmanifest">
-  <link rel="icon" type="image/png" href="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_2.png">
-  <link rel="apple-touch-icon" type="image/png" href="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_2.png">
+  <link rel="icon" type="image/png" href="/images/icon_hu85a07322c530cceea296d8587c3ca4ac_72146_32x32_fill_lanczos_center_2.png">
+  <link rel="apple-touch-icon" type="image/png" href="/images/icon_hu85a07322c530cceea296d8587c3ca4ac_72146_192x192_fill_lanczos_center_2.png">
 
   <link rel="canonical" href="/appointment/">
 
@@ -524,7 +524,7 @@ text-align: justify}
                 font-family: GibsonSemibold, Helvetica Neue, Helvetica, Arial, sans-serif;
                 float:right !important;
                 text-shadow:0 1px 1px rgba(0,0,0,0.2)" 
-        onClick = "Calendly.showPopupWidget('https://calendly.com/bgj2/laeknagardur');return false;">
+        onClick = "Calendly.showPopupWidget('https://calendly.com/trhvs/laeknagardur');return false;">
          Bóka ráðgjöf
     </button>
 </div>
@@ -554,7 +554,7 @@ text-align: justify}
                 font-family: GibsonSemibold, Helvetica Neue, Helvetica, Arial, sans-serif;
                 float:right !important;
                 text-shadow:0 1px 1px rgba(0,0,0,0.2)" 
-        onClick = "Calendly.showPopupWidget('https://calendly.com/bgj2/islenskerfdagreining');return false;">
+        onClick = "Calendly.showPopupWidget('https://calendly.com/trhvs/islenskerfdagreining');return false;">
          Bóka ráðgjöf
     </button>
 </div>
