--- a/content/confirmation/_index.html
+++ b/content/confirmation/_index.html
@@ -3,7 +3,7 @@ header:
   caption: ""
   image: ""
 view: 3
-
+title: Bókun staðfest
 ---
 
 
@@ -12,4 +12,6 @@ view: 3
 body {
 text-align: justify}
 </style>
-<p>Takk fyrir að bóka hjá okkur!</p>
+<div id="takk-fyrir-að-bóka-hjá-okkur" class="section level2">
+<h2>Takk fyrir að bóka hjá okkur!</h2>
+</div>
