--- a/public/confirmation/index.html
+++ b/public/confirmation/index.html
@@ -232,7 +232,7 @@
   
   <meta property="og:site_name" content="Tölfræðiráðgjöf Heilbrigðisvísindasviðs">
   <meta property="og:url" content="/confirmation/">
-  <meta property="og:title" content=" | Tölfræðiráðgjöf Heilbrigðisvísindasviðs">
+  <meta property="og:title" content="Bókun staðfest | Tölfræðiráðgjöf Heilbrigðisvísindasviðs">
   <meta property="og:description" content="Tölfræðiráðgjöf Heilbrigðisvísindasviðs Háskóla Íslands"><meta property="og:image" content="img/map[gravatar:%!s(bool=false) shape:circle]">
   <meta property="twitter:image" content="img/map[gravatar:%!s(bool=false) shape:circle]"><meta property="og:locale" content="en-us">
   
@@ -253,7 +253,7 @@
 
 
 
-  <title> | Tölfræðiráðgjöf Heilbrigðisvísindasviðs</title>
+  <title>Bókun staðfest | Tölfræðiráðgjöf Heilbrigðisvísindasviðs</title>
 
 </head>
 
@@ -471,8 +471,6 @@
 
 
 
-  
-
 
 
 
@@ -487,7 +485,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1></h1>
+  <h1>Bókun staðfest</h1>
 
   
 
@@ -505,7 +503,9 @@
 body {
 text-align: justify}
 </style>
-<p>Takk fyrir að bóka hjá okkur!</p>
+<div id="takk-fyrir-að-bóka-hjá-okkur" class="section level2">
+<h2>Takk fyrir að bóka hjá okkur!</h2>
+</div>
 </div>
   
 
