--- a/content/appointment/_index.html
+++ b/content/appointment/_index.html
@@ -12,23 +12,36 @@ view: 3
 body {
 text-align: justify}
 </style>
-<div id="læknagarður" class="section level1">
-<h1>Læknagarður</h1>
-<p><img src="1920_laeknagardur.jpg" width="90%" /></p>
+<div id="fjarfundir-vegna-covid-19" class="section level1">
+<h1>Fjarfundir vegna COVID-19</h1>
+{{% boka_fjarfundur %}}
+<p>Vegna COVID faraldurs eru öll viðtöl okkar á formi fjarfunda. Bókið tíma og við munum senda fundarboð í Microsoft Teams.</p>
+<p><a href="https://uts.hi.is/teams_fjarfundir">Hér má sjá teams ráð í boði Upplýsingatækvisviðs</a></p>
+<!-- 
+# Læknagarður
+
+<img src="1920_laeknagardur.jpg" width="90%" />
+
+
 {{% boka_laeknagardur %}}
-<p>Á skrifstofu okkar í Læknagarði fer almenna ráðgjöfin fram. Þar geta allir sem eru framhaldsnemendur eða akademískt starfsfólk Heilbrigðisvísindasviðs bókað tíma. Skrifstofa okkar er staðsett á þriðjuhæð í <em>stofu 331</em>.</p>
-<ul>
-<li>Þriðjudagar: 09:00 - 14:00</li>
-<li>Fimmtudagar: 09:00 - 14:00</li>
-</ul>
-<hr />
-</div>
-<div id="íslensk-erfðagreining" class="section level1">
-<h1>Íslensk Erfðagreining</h1>
-<p><img src="decode.jpg" width="90%" /></p>
+
+Á skrifstofu okkar í Læknagarði fer almenna ráðgjöfin fram. Þar geta allir sem eru framhaldsnemendur eða akademískt starfsfólk Heilbrigðisvísindasviðs bókað tíma. Skrifstofa okkar er staðsett á þriðjuhæð í *stofu 331*.
+
+* Þriðjudagar: 09:00 - 14:00
+* Fimmtudagar: 09:00 - 14:00
+
+***
+
+# Íslensk Erfðagreining 
+
+<img src="decode.jpg" width="90%" />
+
+
 {{% boka_decode %}}
-<p>Hér geta framhaldsnemendur og starfsfólk sem eru nú þegar til húsa í Íslenskri Erfðagreiningu bókað tíma. Ráðgjöfin er almennt séð staðsett hjá Miðstöð í Lýðheilsuvísindum en getur farið fram hvar sem er í byggingunni.</p>
-<ul>
-<li>Mánudagar: 09:00 - 14:00</li>
-</ul>
+
+Hér geta framhaldsnemendur og starfsfólk sem eru nú þegar til húsa í Íslenskri Erfðagreiningu bókað tíma. Ráðgjöfin er almennt séð staðsett hjá Miðstöð í Lýðheilsuvísindum en getur farið fram hvar sem er í byggingunni.
+
+* Mánudagar: 09:00 - 14:00
+
+-->
 </div>
