Breyta námsefni og bókunarsíðu

--- a/public/appointment/index.html
+++ b/public/appointment/index.html
@@ -512,36 +512,9 @@
 body {
 text-align: justify}
 </style>
-<div id="fjarfundir-vegna-covid-19" class="section level1">
-<h1>Fjarfundir vegna COVID-19</h1>
-<div class="cta">
-    <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
-    <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-    <button 
-    style = "background-color:#005691; 
-                color: #fff;
-                margin-top:10px;
-                margin-bottom:16px;
-                margin-left: 20px;
-                margin-right: 20px;
-                border-radius:4px;
-                font-size:1.2em;
-                padding:10px 10px;    
-                font-family: GibsonSemibold, Helvetica Neue, Helvetica, Arial, sans-serif;
-                float:right !important;
-                text-shadow:0 1px 1px rgba(0,0,0,0.2)" 
-        onClick = "Calendly.showPopupWidget('https://calendly.com/trhvs/fjarfundur');return false;">
-         Bóka ráðgjöf
-    </button>
-</div>
-<p>Vegna COVID faraldurs eru öll viðtöl okkar á formi fjarfunda. Bókið tíma og við munum senda fundarboð í Microsoft Teams.</p>
-<p><a href="https://uts.hi.is/teams_fjarfundir">Hér má sjá teams ráð í boði Upplýsingatækvisviðs</a></p>
-<!-- 
-# Læknagarður
-
-<img src="1920_laeknagardur.jpg" width="90%" />
-
-
+<div id="læknagarður" class="section level1">
+<h1>Læknagarður</h1>
+<p><img src="1920_laeknagardur.jpg" width="90%" /></p>
 <div class="cta">
     <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
@@ -562,19 +535,16 @@ text-align: justify}
          Bóka ráðgjöf
     </button>
 </div>
-
-Á skrifstofu okkar í Læknagarði fer almenna ráðgjöfin fram. Þar geta allir sem eru framhaldsnemendur eða akademískt starfsfólk Heilbrigðisvísindasviðs bókað tíma. Skrifstofa okkar er staðsett á þriðjuhæð í *stofu 331*.
-
-* Þriðjudagar: 09:00 - 14:00
-* Fimmtudagar: 09:00 - 14:00
-
-***
-
-# Íslensk Erfðagreining 
-
-<img src="decode.jpg" width="90%" />
-
-
+<p>Á skrifstofu okkar í Læknagarði fer almenna ráðgjöfin fram. Þar geta allir sem eru framhaldsnemendur eða akademískt starfsfólk Heilbrigðisvísindasviðs bókað tíma. Skrifstofa okkar er staðsett á þriðjuhæð í <em>stofu 331</em>.</p>
+<ul>
+<li>Þriðjudagar: 09:00 - 14:00</li>
+<li>Fimmtudagar: 09:00 - 14:00</li>
+</ul>
+<hr />
+</div>
+<div id="íslensk-erfðagreining" class="section level1">
+<h1>Íslensk Erfðagreining</h1>
+<p><img src="decode.jpg" width="90%" /></p>
 <div class="cta">
     <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
@@ -595,12 +565,10 @@ text-align: justify}
          Bóka ráðgjöf
     </button>
 </div>
-
-Hér geta framhaldsnemendur og starfsfólk sem eru nú þegar til húsa í Íslenskri Erfðagreiningu bókað tíma. Ráðgjöfin er almennt séð staðsett hjá Miðstöð í Lýðheilsuvísindum en getur farið fram hvar sem er í byggingunni.
-
-* Mánudagar: 09:00 - 14:00
-
--->
+<p>Hér geta framhaldsnemendur og starfsfólk sem eru nú þegar til húsa í Íslenskri Erfðagreiningu bókað tíma. Ráðgjöfin er almennt séð staðsett hjá Miðstöð í Lýðheilsuvísindum en getur farið fram hvar sem er í byggingunni.</p>
+<ul>
+<li>Mánudagar: 09:00 - 14:00</li>
+</ul>
 </div>
 </div>
   
