Breyta folder skipulagi. Skýra með lýsandi titlum.

--- a/public/teaching_material/index.html
+++ b/public/teaching_material/index.html
@@ -387,7 +387,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/post/"><span>Færslur</span></a>
+          <a class="nav-link " href="/tolfraedi_fyrir_almenning/"><span>Færslur</span></a>
         </li>
 
         
